--- a/tests/client/TestRunner.html
+++ b/tests/client/TestRunner.html
@@ -31,6 +31,7 @@
                 //Declare tests
                 var tests = [
                     'dashboard/views/activity_list_view_spec',
+                    'dashboard/views/app_status_view_spec',
                     'common/helpers/strings_spec',
                     'common/helpers/datetimes_spec'
                 ]
