--- a/tests/client/TestRunner.html
+++ b/tests/client/TestRunner.html
@@ -30,7 +30,8 @@
 
                 //Declare tests
                 var tests = [
-                    'dashboard/views/activity_list_view_spec'
+                    'dashboard/views/activity_list_view_spec',
+                    'common/views/loading_item_view_spec'
                 ]
 
                 for (var i in tests) {
