add entitylinks helper tests

--- a/tests/client/TestRunner.html
+++ b/tests/client/TestRunner.html
@@ -31,7 +31,8 @@
                 //Declare tests
                 var tests = [
                     'dashboard/views/activity_list_view_spec',
-                    'common/helpers/strings_spec'
+                    'common/helpers/strings_spec',
+                    'common/helpers/entitylinks_spec'
                 ]
 
                 for (var i in tests) {
