--- a/tests/client/TestRunner.html
+++ b/tests/client/TestRunner.html
@@ -32,7 +32,8 @@
                 var tests = [
                     'dashboard/views/activity_list_view_spec',
                     'common/helpers/strings_spec',
-                    'common/helpers/bootstrap_spec'
+                    'common/helpers/bootstrap_spec',
+                    'common/helpers/numbers_spec'
                 ]
 
                 for (var i in tests) {
